// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complexModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::complexModule>>
 * BESPOKE<<fn1, TEST1, test2, 3tESt3>>
 * SIGNED<</Ym975X1/1tR6/m7H/uOi5zKh3xwezJx8xufPCcmz9FVu4pAmDohRouqFHdIJG6TuaU4uU5YbPZMnswferFbOg==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";


export async function function2(
  var1: string,
  var2: object,
): Promise<string[]> {
  /* BESPOKE START <<fn1>> */
  /* BESPOKE END <<fn1>> */
}

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */

/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */

let mutableVariable: number | null | undefined = 1;

export async function function2(
): Promise<string> {
}

export const exportedVariable: string;

/* BESPOKE START <<3tESt3>> */
/* BESPOKE END <<3tESt3>> */

const immutableVariable: string | undefined = \\"TEST\\";

function function1(
): void {
}
"
`;

exports[`contentModule 1`] = `
"/**
 * This file is partially generated; only edit bespoke sections.
 *
 * SOURCE<<src/__tests__/module.test.ts::contentModule>>
 * BESPOKE<<TEST1, test2, fn1>>
 * SIGNED<<kcc8RBURHKkXTFsA++1Y2T5CA6tqnTVwdQaKBPMhbxhHHJHqVEIwiUph0DRyhfJU70MapfquynjUxvPoasmB/w==>>
 */

/* BESPOKE START <<TEST1>> */
/* BESPOKE END <<TEST1>> */

function function1(
): void {
}

export const exportedVariable: string;

export async function function2(
): Promise<string> {
}

const immutableVariable: string | undefined = \\"TEST\\";

let mutableVariable: number | null | undefined = 1;

/* BESPOKE START <<test2>> */
/* BESPOKE END <<test2>> */

export async function function2(
  var1: string,
  var2: object,
): Promise<string[]> {
  /* BESPOKE START <<fn1>> */
  /* BESPOKE END <<fn1>> */
}
"
`;

exports[`emptyModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::emptyModule>>
 * SIGNED<<vmiIOMqGhuXJBom/KrWFzvETfJmbSMcLkvZ6XDTcFWl7XRHJgu1tcb4eHn97TgcziEqpfD96M5qO0DV3z3S+CQ==>>
 */
"
`;

exports[`importModule 1`] = `
"/**
 * This file is fully generated; do not manually edit.
 *
 * SOURCE<<src/__tests__/module.test.ts::importModule>>
 * SIGNED<<EJWOrRMLAeusKmK7X5+JjyKfAKF8ryn6DAAEwIiaXsQogb/SSONlan944YLt/m93dE2HDU38Me1lqSA0C05OZQ==>>
 */

import \\"./p\\";
import \\"aqe\\";
import \\"ZZZ\\";

import {
  B,
  c,
} from \\"a\\";
import * as aaa from \\"BbB\\";
import ooo from \\"nnn\\";
import xxx from \\"www\\";
import * as zzz from \\"YYY\\";

import {
  g,
  r,
  z,
} from \\"./a\\";
import fff from \\"./ddd\\";
import * as mmm from \\"./mmm\\";
import {
  A,
  wA,
} from \\"./R\\";
"
`;
